add app.use para js e css; corrigido login com email e senha; feito logout;

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "author": "Lariel Negreiros dos Santos",
   "license": "ISC",
   "dependencies": {
-    "socket.io": "*",
-    "express": "*"
+    "express": "*",
+    "firebase": "^5.0.4",
+    "socket.io": "*"
   }
 }
